--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 [submodule "pybind11_json"]
 	path = pybind11_json
 	url = https://github.com/pybind/pybind11_json.git
+[submodule "sha1"]
+	path = sha1
+	url = https://github.com/samarrhilane/sha1
+	
+	
